@@ -39,6 +39,12 @@
 <h2>Banshee</h2>
 <p><a href="http://banshee-project.org/Main_Page">Banshee</a> is a music player for GNOME using Mono</p>
 
+<h2>Boxtream</h2>
+<p><a href="http://cortex.unice.fr/~jerome/boxtream/">Boxtream</a> is a project
+of hardware and software forming a mobile and autonomous video streaming and
+recording studio.</p>
+
+
 <h2>BMPx</h2>
 <p><a href="http://beep-media-player.org/site/BMPx_Homepage">BMPx</a> is a music player using GTK+ with a 'Winamp' like interface</p>
 
